--- a/templates/county.html
+++ b/templates/county.html
@@ -32,11 +32,18 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/revolution.addon.revealer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
-
+	
+	<!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+	
+	<!-- Search CSS -->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-houston.css') }}">
 
 	<!-- Document Title
 	============================================= -->
-	<title>Contact Us</title>
+	<title> Listing Search </title>
 
 	<style>
 
@@ -109,8 +116,8 @@
 					<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="search"><div>Search</div></a></li>
-							<li><a href="#"><div>Alerts</div></a></li>
+							<li><a href="#"><div>Search</div></a></li>
+							<li><a href="alerts"><div>Alerts</div></a></li>
 						</ul>
 
 						<ul>
@@ -137,7 +144,7 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='images/buyout-blue2.jpg') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue2.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-blue.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -184,7 +191,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Alert &nbsp;System </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Listing Search </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -256,7 +263,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Data &nbsp;Analytics </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Analytics &nbsp;Data </a>
 						</li>
 					  </ul>
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -272,68 +279,22 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-
-						<!-- Contact Form
-						============================================= -->
-						<h3>Send Email Alert Notifications</h3>
-
-						<div class="form-widget">
-
-							<div class="form-result"></div>
-
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
-
-								<div class="form-process"></div>
-
-								<div class="col_one_third">
-									<label for="template-contactform-name">Name <small>*</small></label>
-									<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
-								</div>
-
-								<div class="col_one_third">
-									<label for="template-contactform-email">Email <small>*</small></label>
-									<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
-								</div>
-
-								<div class="col_one_third col_last">
-									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
-								</div>
-
-								<div class="clear"></div>
-
-								<div class="col_two_third">
-									<label for="template-contactform-subject">Subject <small>*</small></label>
-									<input type="text" id="template-contactform-subject" name="subject" value="" class="required sm-form-control" />
-								</div>
-
-								<div class="col_one_third col_last">
-									<label for="template-contactform-department">Department <small>*</small></label>
-									<input type="text" id="template-contactform-department" name="subject" value="" class="required sm-form-control" />
-								</div>
-
-								<div class="clear"></div>
-
-								<div class="col_full hidden">
-									<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
-								</div>
-
-								<div class="col_full">
-									<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
-								</div>
-
-								<input type="hidden" name="prefix" value="template-contactform-">
-
-							</form>
-							
-						</div>
+					
+					<div id="map-container" position="center">  
+						
+         				<div id="map" align="center"></div>
+						
+					</div>
+					
+					<script type="text/javascript" src="../static/js/config.js"></script>
+      
+    					<script type="text/javascript" src="../static/js/houstonmap.js"></script>
 
 				</div>
 
 			</div>
 
 		</section><!-- #content end -->
-
 
 		<!-- Footer
 		============================================= -->
@@ -395,6 +356,20 @@
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.parallax.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
+	
+<!-- Leaflet JS -->
+<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+crossorigin=""></script>
+	
+<!-- d3 JS -->
+<script src="https://d3js.org/d3.v4.min.js"></script>
+	
+<!-- KEY -->
+<script src="{{ url_for('static', filename='js/config.js') }}"></script>
+      
+<!-- HOUSTON MAP JS  -->
+<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script>
 
 <!-- ADD-ONS JS FILES -->   
 <script>
@@ -688,11 +663,8 @@
 			window.location.reload();
 		});
 	}
-		/*
-		RsParticlesAddOn(revapi109);
-
-		RsRevealerAddOn(tpj, revapi109, "<div class='rsaddon-revealer-spinner rsaddon-revealer-spinner-1'><div class='rsaddon-revealer-1'><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><span style='background: {{color}}'><\/span><\/div><\/div \/>");*/
-	});	/*ready*/
+		
+	});
 </script>
 
 </body>
