--- a/templates/about.html
+++ b/templates/about.html
@@ -109,14 +109,16 @@
 					<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="search"><div>Search</div></a></li>
-							<li><a href="alerts"><div>Alerts</div></a></li>
+							<li><a href="search"><div>Alerts</div></a></li>
+							<li><a href="alerts"><div>County</div></a></li>
+							<li><a href="county"><div>Neighborhood</div></a></li>
 						</ul>
 
 						<ul>
 							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
-							<li><a href=""><div>About</div></a></li>
+							<li><a href="contact"><div>Contact</div></a></li>
+							<li><a href="about"><div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
