--- a/templates/neighborhood.html
+++ b/templates/neighborhood.html
@@ -43,7 +43,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title> Listing Search </title>
+	<title> Neighborhood Listings </title>
 
 	<style>
 
@@ -191,7 +191,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Listing Search </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Neighborhoods </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
