--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,7 @@
 	<!-- ADD-ONS CSS FILES -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/revolution.addon.revealer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
-	
+		
 	<!-- Document Title
 	============================================= -->
 	<title>Home Buyout Program</title>
@@ -81,7 +80,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="split-menu full-header transparent-header dark clearfix">
+		<header id="header" class="split-menu transparent-header dark clearfix">
 
 			<div id="header-wrap">
 
